fix hero paragraphs paddings

--- a/src/index.html
+++ b/src/index.html
@@ -131,10 +131,10 @@
           <div class="hero__description hero__bottom">
             <p class="text hero__text">Panam Ba - первая любительская школа по пляжному и классическому волейболу в
               Грузии. Наши филиалы открыты в Тбилиси и Батуми.</p>
-            <p class="text">Обучаем мужчин и женщин разных возрастов и с разным уровнем подготовки. Проводим
+            <p class="text hero__text">Обучаем мужчин и женщин разных возрастов и с разным уровнем подготовки. Проводим
               детские
               тренировки от 8 до 16 лет.</p>
-            <p class="text">У нас вы сможете усовершенствовать и отточить свои спортивные навыки, а также
+            <p class="text hero__text">У нас вы сможете усовершенствовать и отточить свои спортивные навыки, а также
               развить в себе
               командный дух в компании новых друзей.</p>
             <p class="text hero__text hero__text--stroke" id="stroke">Проводим турниры, кемпы, корпоративные игры.
