--- a/src/english.html
+++ b/src/english.html
@@ -72,21 +72,21 @@
         <ul class="nav__list">
           <li class="nav__item-left">
             <ul class="nav__list-left">
-              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link">Тренировки</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link">Кемпы</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link">Услуги</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link">Trainings</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link">Camps</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link">Services</a></li>
             </ul>
           </li>
 
           <li class="nav__item-right">
             <ul class="nav__list-right">
-              <li class="nav__item"><a href="#trainers" class="nav__link">Тренеры</a></li>
-              <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
+              <li class="nav__item"><a href="#trainers" class="nav__link">Trainers</a></li>
+              <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
-                  <a href="/" class="nav__link nav__link--visible">rus</a>
+                  <span class="nav__link nav__link--visible">eng</span>
                   <ul class="nav__switcher">
-                    <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
+                    <li class="nav__item"><a href="/" class="nav__link">rus</a></li>
                     <li class="nav__item"><a href="/georgian.html" class="nav__link">ka</a></li>
                   </ul>
                 </div>
