--- a/src/georgian.html
+++ b/src/georgian.html
@@ -84,10 +84,10 @@
               <li class="nav__item"><a href="#contacts" class="nav__link">კონტაქტები</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
-                  <a href="/" class="nav__link nav__link--visible">rus</a>
+                  <span class="nav__link nav__link--visible">ka</span>
                   <ul class="nav__switcher">
                     <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
-                    <li class="nav__item"><a href="/georgian.html" class="nav__link">ka</a></li>
+                    <li class="nav__item"><a href="/" class="nav__link">rus</a></li>
                   </ul>
                 </div>
               </li>
