--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
               <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
-                  <a href="/" class="nav__link nav__link--visible">rus</a>
+                  <span class="nav__link nav__link--visible">rus</span>
                   <ul class="nav__switcher">
                     <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
                     <li class="nav__item"><a href="/georgian.html" class="nav__link">ka</a></li>
