add georgian language

--- a/src/georgian.html
+++ b/src/georgian.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="images/favicon.png">
 
-  <title>Школа волейбола в Тбилиси | Panam-Ba</title>
+  <title>ფრენბურთის სკოლა თბილისში | Panam-Ba</title>
   <meta name="description" content="">
 
   <meta property="og:type" content="">
@@ -152,58 +152,58 @@
     <section class="runline section" id="runline">
       <div class="runline__row">
         <div class="runline__line runline__line--left">
-          <p class="runline__text runline__text--yellow">Крутые кемпы</p>
-          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
-          <p class="runline__text runline__text--green">Опытные тренеры</p>
-          <p class="runline__text runline__text--black">Выгодные цены</p>
+          <p class="runline__text runline__text--yellow">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--blue">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--green">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--black">ხელსაყრელი ფასები</p>
         </div>
         <div class="runline__line runline__line--left">
-          <p class="runline__text runline__text--yellow">Крутые кемпы</p>
-          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
-          <p class="runline__text runline__text--green">Опытные тренеры</p>
-          <p class="runline__text runline__text--black">Выгодные цены</p>
+          <p class="runline__text runline__text--yellow">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--blue">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--green">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--black">ხელსაყრელი ფასები</p>
         </div>
       </div>
       <div class="runline__row">
         <div class="runline__line runline__line--right">
-          <p class="runline__text runline__text--black">Выгодные цены</p>
-          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
-          <p class="runline__text runline__text--green">Крутые кемпы</p>
-          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">ხელსაყრელი ფასები</p>
+          <p class="runline__text runline__text--blue">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--green">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--yellow">გამოცდილი მწვრთნელები</p>
         </div>
         <div class="runline__line runline__line--right">
-          <p class="runline__text runline__text--black">Выгодные цены</p>
-          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
-          <p class="runline__text runline__text--green">Крутые кемпы</p>
-          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">ხელსაყრელი ფასები</p>
+          <p class="runline__text runline__text--blue">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--green">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--yellow">გამოცდილი მწვრთნელები</p>
         </div>
       </div>
       <div class="runline__row">
         <div class="runline__line runline__line--left">
-          <p class="runline__text runline__text--black">Крутые кемпы</p>
-          <p class="runline__text runline__text--green">Большое коммьюнити</p>
-          <p class="runline__text runline__text--blue">Опытные тренеры</p>
-          <p class="runline__text runline__text--yellow">Турниры и игры</p>
+          <p class="runline__text runline__text--black">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--green">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--blue">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--yellow">ტურნირები და თამაშები</p>
         </div>
         <div class="runline__line runline__line--left">
-          <p class="runline__text runline__text--black">Крутые кемпы</p>
-          <p class="runline__text runline__text--green">Большое коммьюнити</p>
-          <p class="runline__text runline__text--blue">Опытные тренеры</p>
-          <p class="runline__text runline__text--yellow">Турниры и игры</p>
+          <p class="runline__text runline__text--black">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--green">მეგობრული გარემო</p>
+          <p class="runline__text runline__text--blue">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--yellow">ტურნირები და თამაშები</p>
         </div>
       </div>
       <div class="runline__row">
         <div class="runline__line runline__line--right">
-          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
-          <p class="runline__text runline__text--black">Турниры и игры</p>
-          <p class="runline__text runline__text--blue">Крутые кемпы</p>
-          <p class="runline__text runline__text--yellow">Большое коммьюнити</p>
+          <p class="runline__text runline__text--yellow">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--black">ტურნირები და თამაშები</p>
+          <p class="runline__text runline__text--blue">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--yellow">მეგობრული გარემო</p>
         </div>
         <div class="runline__line runline__line--right">
-          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
-          <p class="runline__text runline__text--black">Турниры и игры</p>
-          <p class="runline__text runline__text--blue">Крутые кемпы</p>
-          <p class="runline__text runline__text--yellow">Большое коммьюнити</p>
+          <p class="runline__text runline__text--yellow">გამოცდილი მწვრთნელები</p>
+          <p class="runline__text runline__text--black">ტურნირები და თამაშები</p>
+          <p class="runline__text runline__text--blue">უმაგრესი ზბორები</p>
+          <p class="runline__text runline__text--yellow">მეგობრული გარემო</p>
         </div>
       </div>
       </div>
@@ -592,7 +592,7 @@
       <div class="container">
 
 
-        <h2 class="service__title title">услуги</h2>
+        <h2 class="service__title title">სერვისები</h2>
 
         <div class="service__swiper swiper-service">
           <div class="swiper-wrapper swiper-service__wrapper">
@@ -621,22 +621,24 @@
                 </div>
                 <div class="swiper-service__content">
                   <div class="swiper-service__content-cell">
-                    <h3 class="swiper-service__title">Индивидуальные тренировки</h3>
+                    <h3 class="swiper-service__title">ინდივიდუალური ვარჯიშები</h3>
                   </div>
                   <div class="swiper-service__content-cell">
                     <p class="swiper-service__text text">
-                      Прокачай свой волейбольный навык уже сегодня! Наши индивидуальные тренировки - путь к успеху!
-                      Специальные методики и тренеры-профессионалы помогут развить все аспекты игры.
+                      გააუმჯობესე ფრენბურთის ნებისმიერი ელემენტი დღესვე ! ჩვენი პერსონალური ვარჯიშები - შენი გზაა
+                      წარმატებისკენ !
+                      სპეციალური მიდგომა ყოველივე მოსწავლესთან, სპეციალური მეთოდიკა პროფესიონალები მწვრთნელების ვარჯიშის
+                      მეშვეობით დაგეხმარებათ გაანვითაროთ, თამაშის ყველა ნიუანსს.
                     </p>
 
                   </div>
                   <div class="swiper-service__content-cell">
-                    <p class="text swiper-service__text">Индивидуальные тренировки 100 лари 1 тренировка длительность
-                      1.5 часа</p>
+                    <p class="text swiper-service__text">ინდივიდუალური ვარჯიშები - 100 ლარი - 1 ვარჯიში, ხანგრძლივობა -
+                      1.5 საათი</p>
                   </div>
                   <div class="swiper-service__content-cell">
-                    <p class="text swiper-service__text">Пакет из 8 тренировок за 640 лари (1 тренировка выходит 80
-                      лари)</p>
+                    <p class="text swiper-service__text">აბონიმენტი 8 ვარჯიშზე - 640 ლარი (აბონიმენტით 1 ვარჯიში გამოდის
+                      - 80 ლარი)</p>
                   </div>
                 </div>
               </div>
@@ -669,32 +671,29 @@
                 </div>
                 <div class="swiper-service__content swiper-service__content--columns">
                   <div class="swiper-service__content-cell">
-                    <h3 class="swiper-service__title">Аренда пляжных кортов</h3>
+                    <h3 class="swiper-service__title">საპლიაჟო ფრენბურთის კორტები</h3>
                   </div>
                   <div class="swiper-service__content-cell">
-                    <p class="swiper-service__text text">Арендуй уютный и качественный волейбольный корт для игры с
-                      друзьями или тренировок. Мы предлагаем классное место для ваших игр. Аренда волейбольного корта в
-                      нашем клубе - это ваш шанс ощутить азарт и бросить вызов друзьям.</p>
+                    <p class="swiper-service__text text">იქირავე სასიამოვნო სათამაშოდ და ხარისხიანი ფრენბურთის კორტი
+                      მეგობრებთან სათამაშოდ ან სავარჯიშოდ.</p>
 
                     <ul class="swiper-service__list">
-                      <li class="swiper-service__list-item text">Удобное расположение</li>
-                      <li class="swiper-service__list-item text">Гибкий график</li>
-                      <li class="swiper-service__list-item text">Приятные цены</li>
+                      <li class="swiper-service__list-item text">კარგი ადგილმდებარეობა</li>
+                      <li class="swiper-service__list-item text">მოხერხებული გრაფიკი</li>
+                      <li class="swiper-service__list-item text">ფასების დინამიკა 🔻</li>
                     </ul>
 
-                    <p class="swiper-service__text text">Забронируйте свой корт сегодня и перенесите вашу игру на
-                      новый
-                      уровень!</p>
+                    <p class="swiper-service__text text">შეგიძლიათ იქირაოთ დღესვე და აამაღლეთ თქვენი თამაშის დონე !</p>
                   </div>
                   <div class="swiper-service__content-cell">
-                    <h6 class="swiper-service__subheading">Маленький корт</h6>
-                    <p class="text swiper-service__text">Утро день 45 лари (Будни)</p>
-                    <p class="text swiper-service__text">Вечер с 18:00 и выходные 50 лари</p>
+                    <h6 class="swiper-service__subheading">კორტი #2</h6>
+                    <p class="text swiper-service__text">დილა - 45 ლარი ( საღამომდე)</p>
+                    <p class="text swiper-service__text">საღამო - 18:00 დან და შაბათ-კვირას - 50 ლარი</p>
                   </div>
                   <div class="swiper-service__content-cell">
-                    <h6 class="swiper-service__subheading">Большой корт</h6>
-                    <p class="text swiper-service__text">Утро день 65 лари</p>
-                    <p class="text swiper-service__text">Вечер с 18:00 и выходные 75 лари</p>
+                    <h6 class="swiper-service__subheading">კორტი #1</h6>
+                    <p class="text swiper-service__text">დილა და დღისით ფასი - 65 ლარი</p>
+                    <p class="text swiper-service__text">საღამო 18:00 დან 75 ლარი</p>
                   </div>
                 </div>
               </div>
@@ -715,7 +714,7 @@
 
     <section class="section trainers" id="trainers">
       <div class="container">
-        <h2 class="title trainers__title">наши тренеры</h2>
+        <h2 class="title trainers__title">ჩვენი ტრენერები</h2>
 
         <div class="trainers__swiper swiper-trainers">
           <div class="swiper-trainers__pagination-wrapper">
@@ -742,10 +741,10 @@
                   height="335.16" />
               </div>
               <div class="swiper-trainers__content">
-                <h6 class="swiper-trainers__subheading">Дэни ⚡️</h6>
-                <p class="text swiper-trainers__text">Игрок сборной Грузии по пляжному волейболу. </p>
-                <p class="text swiper-trainers__text">Чемпион Грузии и участник этапов на турнирах EEVZA. Проведено
-                  около 1000 тренировок.</p>
+                <h6 class="swiper-trainers__subheading">დენი ⚡️</h6>
+                <p class="text swiper-trainers__text">საქართველოს ეროვნული ნაკრების მოთამაშე.</p>
+                <p class="text swiper-trainers__text">საქართველოს ჩემპიონი და ევროპის ჩემპიონატის პრიზიორი, გამოცდილი
+                  მწვრთნელი, ჩატარებული ააქვს 1000 ვარჯიშზე მეტი.</p>
               </div>
             </div>
             <div class="swiper-slide swiper-trainers__slide">
@@ -754,13 +753,11 @@
                   loading="lazy" width="427.6" height="335.16" />
               </div>
               <div class="swiper-trainers__content">
-                <h6 class="swiper-trainers__subheading">Тамаз Харатишвили, 24</h6>
-                <p class="text swiper-trainers__text">Образование высшее - университет Физической культуры и спорта.</p>
-                <p class="text swiper-trainers__text">Тренерский стаж - 3 года работает как и с детьми так и со
-                  взрослыми.</p>
-                <p class="text swiper-trainers__text">Тамаз проходил курсы с лучшими тренерами мира в Словении - 2021
-                  году. Так же есть
-                  сертификат тренера детей с 8 лет.</p>
+                <h6 class="swiper-trainers__subheading">თამაზ ხარატიშვილი, 24</h6>
+                <p class="text swiper-trainers__text">უმაღლესი განათლება ააქვს მიღებული სპორტის სფეროში, ფიზიკური
+                  აღზრდისა და სპორტის უნივერსიტეტში.</p>
+                <p class="text swiper-trainers__text">სამწვრთნელო გამოცდილება - 4 წელი. მუშაობს როგორც პატარებთან ასევე
+                  დიდებთან.</p>
               </div>
             </div>
             <div class="swiper-slide swiper-trainers__slide">
@@ -769,12 +766,11 @@
                   height="335.16" />
               </div>
               <div class="swiper-trainers__content">
-                <h6 class="swiper-trainers__subheading">Илья</h6>
-                <p class="text swiper-trainers__text">Мастер Спорта по волейболу,
-                  игрок таких клубов как «ЦСКА»
-                  и «Белогорье», имеет два высших образования в области «тренер
-                  и педагог», а также сертифицированный тренер Level 1 FIVB, большой опыт работы
-                  с любителями и профессионалами.</p>
+                <h6 class="swiper-trainers__subheading">ილია</h6>
+                <p class="text swiper-trainers__text">სპორტის ოსტატი ფრენბურთში, ისეთი კლუბების მოთამაშე როგორებიც არის
+                  "ცსკა" და "ბელოგორიე", ააქვს 2 უმაღლესი განათლება სამწვრთნელო და პედაგოგიური, ასევე არის
+                  სერტიფიცირებული უმაღლესი დონის FIVB სამწვრთნელო სერტიფიკატით, დიდი გამოცდილება პროფესიონალურ და
+                  მოყვარულ ფრენბურთელებთან მუშაობაში.</p>
               </div>
             </div>
             <div class="swiper-slide swiper-trainers__slide">
@@ -783,15 +779,12 @@
                   loading="lazy" width="427.6" height="335.16" />
               </div>
               <div class="swiper-trainers__content">
-                <h6 class="swiper-trainers__subheading">Роман Гавашели</h6>
-                <p class="text swiper-trainers__text">Играл за сборную Грузии, затем играл
-                  в Турции в 2003 уехал в США
-                  и полностью переключился на пляжный волейбол, многократный победитель турниров East and Volleyball
-                  Open участник турниров от AVP, 2021 году стал чемпионом Грузии, также
-                  по пляжному волейболу!</p>
-                <p class="text swiper-trainers__text">"Волейбол это моя жизнь" говорит Роман и горит желанием передать
-                  любовь к волейболу
-                  каждому ❤️</p>
+                <h6 class="swiper-trainers__subheading">რომან გავაშელი</h6>
+                <p class="text swiper-trainers__text">ააქვს ნათამაშები საქართველოს ეროვნულ ნაკრებში 2003 წლიდან ასევე
+                  თურქეთში, შემდგომ სრულად გადაირთო ქვიშის ფრენბურთზე, მრავალი გზის ჩემპიონი East and Volleyball Open
+                  ჩემპიონატში. AVP ტურნირის, მოთამაშე, 2021 წელს გახდა საქართველოს ჩემპიონი საპლიაჟო ფრენბურთში!</p>
+                <p class="text swiper-trainers__text">"ფრენბურთი არის ჩემი ცხოვრება " ამბობს რომა და დიდი სურვილი ააქვს
+                  გადასცეს ეს სიყვარული❤️</p>
               </div>
             </div>
           </div>
@@ -817,7 +810,7 @@
 
     <section class="section contacts" id="contacts">
       <div class="container">
-        <h2 class="title contacts__title">где нас найти</h2>
+        <h2 class="title contacts__title">სად გვეპოვა</h2>
         <div class="contacts__body">
           <div class="contacts__map">
             <iframe
@@ -827,14 +820,14 @@
           </div>
           <div class="contacts__content">
             <p class="text">
-              Tbilisi, Грузия
+              თბილისი, საქართველო
             </p>
             <a href="#" class="text contacts__content-link">+995 595 00 66 06</a>
             <a href="#" class="text contacts__content-link">panamba@example.com</a>
           </div>
         </div>
         <div class="contacts__footer">
-          <h2 class="title contacts__footer-title">Контакты</h2>
+          <h2 class="title contacts__footer-title">კონტაქტები</h2>
           <ul class="contacts__list">
             <li class="contacts__item contacts__item--facebook"><a href="#"
                 class="contacts__link contacts__link--facebook">FACEBOOK</a></li>
