--- a/src/index.html
+++ b/src/index.html
@@ -845,6 +845,26 @@
         </div>
       </div>
     </section>
+    <section class="section form">
+
+      <div class="container">
+        <h2 class="title contacts__footer-title">Написать нам</h2>
+        <form action="" method="post">
+          <label for="" class="form__label">
+            <input type="text" name="name" class="form__input" placeholder="Ваше имя">
+          </label>
+          <label for="" class="form__label">
+            <input type="text" name="contacts" class="form__input" placeholder="Ваши контакты">
+          </label>
+          <label for="" class="form__label">
+            <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
+          </label>
+          <button type="submit" class="btn hero__btn btn__main">Отправить</button>
+        </form>
+
+      </div>
+
+    </section>
   </main>
 
 
