--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
               <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
-                  <span class="nav__link nav__link--visible">rus</span>
+                  <span class="nav__link nav__link--visible nav__link--lang">rus</span>
                   <ul class="nav__switcher">
                     <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
                     <li class="nav__item"><a href="/georgian.html" class="nav__link">ka</a></li>
@@ -849,7 +849,7 @@
 
       <div class="container">
         <h2 class="title contacts__footer-title">Написать нам</h2>
-        <form action="" method="post">
+        <form action="" method="post" class="form__form">
           <label for="" class="form__label">
             <input type="text" name="name" class="form__input" placeholder="Ваше имя">
           </label>
@@ -859,7 +859,7 @@
           <label for="" class="form__label">
             <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
           </label>
-          <button type="submit" class="btn hero__btn btn__main">Отправить</button>
+          <button type="submit" class="btn hero__btn btn__main form__btn">Отправить</button>
         </form>
 
       </div>
