--- a/src/georgian.html
+++ b/src/georgian.html
@@ -84,7 +84,7 @@
               <li class="nav__item"><a href="#contacts" class="nav__link">კონტაქტები</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
-                  <span class="nav__link nav__link--visible">ka</span>
+                  <span class="nav__link nav__link--visible nav__link--lang">ka</span>
                   <ul class="nav__switcher">
                     <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
                     <li class="nav__item"><a href="/" class="nav__link">rus</a></li>
@@ -837,6 +837,26 @@
           </ul>
         </div>
       </div>
+    </section>
+    <section class="section form">
+
+      <div class="container">
+        <h2 class="title contacts__footer-title">Написать нам</h2>
+        <form action="" method="post" class="form__form">
+          <label for="" class="form__label">
+            <input type="text" name="name" class="form__input" placeholder="Ваше имя">
+          </label>
+          <label for="" class="form__label">
+            <input type="text" name="contacts" class="form__input" placeholder="Ваши контакты">
+          </label>
+          <label for="" class="form__label">
+            <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
+          </label>
+          <button type="submit" class="btn hero__btn btn__main form__btn">Отправить</button>
+        </form>
+
+      </div>
+
     </section>
   </main>
 
