--- a/src/georgian.html
+++ b/src/georgian.html
@@ -841,18 +841,17 @@
     <section class="section form">
 
       <div class="container">
-        <h2 class="title contacts__footer-title">Написать нам</h2>
+        <h2 class="title contacts__footer-title">მოგვწერეთ</h2>
         <form action="" method="post" class="form__form">
           <label for="" class="form__label">
-            <input type="text" name="name" class="form__input" placeholder="Ваше имя">
+            <input type="text" name="name" class="form__input" placeholder="თქვენი სახელი"> </label>
+          <label for="" class=" form__label">
+            <input type="text" name="contacts" class="form__input" placeholder="თქვენი კონტაქტები">
           </label>
           <label for="" class="form__label">
-            <input type="text" name="contacts" class="form__input" placeholder="Ваши контакты">
+            <input type="textarea" name="message" class="form__input" placeholder="თქვენი შეტყობინება">
           </label>
-          <label for="" class="form__label">
-            <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
-          </label>
-          <button type="submit" class="btn hero__btn btn__main form__btn">Отправить</button>
+          <button type="submit" class="btn hero__btn btn__main form__btn">გაგზავნა</button>
         </form>
 
       </div>
