--- a/src/english.html
+++ b/src/english.html
@@ -769,7 +769,7 @@
                 <h6 class="swiper-trainers__subheading">Ilya Muradov</h6>
                 <p class="text swiper-trainers__text">Master of Sports in volleyball, player of such clubs as CSKA and
                   Belogorye, has two higher educations in the field of “coach and teacher”, as well as a certified FIVB
-                  level 1 coach, extensive experience working with amateurs and professionals./p>
+                  level 1 coach, extensive experience working with amateurs and professionals.</p>
               </div>
             </div>
             <div class="swiper-slide swiper-trainers__slide">
@@ -842,18 +842,18 @@
     <section class="section form">
 
       <div class="container">
-        <h2 class="title contacts__footer-title">Написать нам</h2>
+        <h2 class="title contacts__footer-title">Message us</h2>
         <form action="" method="post" class="form__form">
           <label for="" class="form__label">
-            <input type="text" name="name" class="form__input" placeholder="Ваше имя">
+            <input type="text" name="name" class="form__input" placeholder="Your name">
           </label>
           <label for="" class="form__label">
-            <input type="text" name="contacts" class="form__input" placeholder="Ваши контакты">
+            <input type="text" name="contacts" class="form__input" placeholder="Your contacts">
           </label>
           <label for="" class="form__label">
-            <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
+            <input type="textarea" name="message" class="form__input" placeholder="Your message">
           </label>
-          <button type="submit" class="btn hero__btn btn__main form__btn">Отправить</button>
+          <button type="submit" class="btn hero__btn btn__main form__btn">Submit</button>
         </form>
 
       </div>
