--- a/src/index.html
+++ b/src/index.html
@@ -72,22 +72,23 @@
         <ul class="nav__list">
           <li class="nav__item-left">
             <ul class="nav__list-left">
-              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link">Тренировки</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link">Кемпы</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link">Услуги</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link" data-id="nav">Тренировки</a>
+              </li>
+              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link" data-id="nav">Кемпы</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link" data-id="nav">Услуги</a></li>
             </ul>
           </li>
 
           <li class="nav__item-right">
             <ul class="nav__list-right">
-              <li class="nav__item"><a href="#trainers" class="nav__link">Тренеры</a></li>
-              <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
+              <li class="nav__item"><a href="#trainers" class="nav__link" data-id="nav">Тренеры</a></li>
+              <li class="nav__item"><a href="#contacts" class="nav__link" data-id="nav">Контакты</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
                   <span class="nav__link nav__link--visible nav__link--lang">rus</span>
                   <ul class="nav__switcher">
-                    <li class="nav__item"><a href="/english.html" class="nav__link">eng</a></li>
-                    <li class="nav__item"><a href="/georgian.html" class="nav__link">ka</a></li>
+                    <li class="nav__item"><a href="/english.html" class="nav__link" data-id="nav">eng</a></li>
+                    <li class="nav__item"><a href="/georgian.html" class="nav__link" data-id="nav">ka</a></li>
                   </ul>
                 </div>
               </li>
@@ -854,7 +855,8 @@
             <input type="text" name="name" class="form__input" placeholder="Ваше имя">
           </label>
           <label for="" class="form__label">
-            <input type="text" name="contacts" class="form__input" placeholder="Ваши контакты">
+            <input type="text" name="contacts" class="form__input"
+              placeholder="Ваши контакты (телефон, telegram, email)">
           </label>
           <label for="" class="form__label">
             <input type="textarea" name="message" class="form__input" placeholder="Ваше сообщение">
