add links instead buttons

--- a/src/georgian.html
+++ b/src/georgian.html
@@ -113,7 +113,7 @@
             <p class="text hero__subtitle">
               ვასწავლით მოზარდებს და ყველაზე პატარებს
             </p>
-            <button class="btn hero__btn btn__main">ვარჯიშზე ჩაწერა</button>
+            <a href="#contacts-section" class="btn hero__btn btn__main btn__link">ვარჯიშზე ჩაწერა</a>
           </div>
 
           <div class="hero__picture hero__picture-top">
@@ -277,8 +277,10 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">ვარჯიშზე ჩაწერა</button>
-              <button class="card__btn btn btn__train">ვარჯიშების ცხრილი</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">ვარჯიშზე ჩაწერა</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">ვარჯიშების ცხრილი</a>
+
             </div>
           </div>
 
@@ -346,8 +348,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">ვარჯიშზე ჩაწერა</button>
-              <button class="card__btn btn btn__train">ვარჯიშების ცხრილი</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">ვარჯიშზე ჩაწერა</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">ვარჯიშების ცხრილი</a>
             </div>
           </div>
 
@@ -414,8 +417,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">ვარჯიშზე ჩაწერა</button>
-              <button class="card__btn btn btn__train">ვარჯიშების ცხრილი</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">ვარჯიშზე ჩაწერა</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">ვარჯიშების ცხრილი</a>
             </div>
           </div>
 
@@ -483,8 +487,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">ვარჯიშზე ჩაწერა</button>
-              <button class="card__btn btn btn__train">ვარჯიშების ცხრილი</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">ვარჯიშზე ჩაწერა</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">ვარჯიშების ცხრილი</a>
             </div>
           </div>
 
@@ -508,8 +513,8 @@
             მწვრთნელები და ორგანიზატორები, ვარჯიშები ჩატარდება დღეში 2 ჯერ, ტურნირი, სპარინგები, თამაშები, ბევრი საჭირო
             ინფორმაცია ფრენბურთზე და თიმბილდინგი.
           </p>
-
-          <button class="camps__btn btn btn__camps">კემპების ნახვა</button>
+          <a href="https://t.me/panamba_volleyball_tbilisi/1138" class="btn__link camps__btn btn btn__camps"
+            target="_blank">კემპების ნახვა</a>
         </div>
         <div class="camps__image-block">
           <div class="camps__image-wrapper">
@@ -643,7 +648,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">ვარჯიშზე ჩაწერა</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">ვარჯიშზე ჩაწერა</a>
               </div>
             </div>
 
@@ -698,7 +703,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">ვარჯიშზე ჩაწერა</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">ვარჯიშზე ჩაწერა</a>
               </div>
             </div>
 
@@ -826,7 +831,7 @@
             <a href="#" class="text contacts__content-link">panamba@example.com</a>
           </div>
         </div>
-        <div class="contacts__footer">
+        <div class="contacts__footer" id="contacts-section">
           <h2 class="title contacts__footer-title">კონტაქტები</h2>
           <ul class="contacts__list">
             <li class="contacts__item contacts__item--facebook"><a href="#"
