--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
           <li class="nav__item-right">
             <ul class="nav__list-right">
               <li class="nav__item"><a href="#trainers" class="nav__link" data-id="nav">Тренеры</a></li>
-              <li class="nav__item"><a href="#contacts" class="nav__link" data-id="nav">Контакты</a></li>
+              <li class="nav__item"><a href="#contacts-section" class="nav__link" data-id="nav">Контакты</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
                   <span class="nav__link nav__link--visible nav__link--lang">rus</span>
@@ -114,7 +114,7 @@
             <p class="text hero__subtitle">
               Обучаем взрослых и детей
             </p>
-            <button class="btn hero__btn btn__main">Записаться на тренировку</button>
+            <a href="#contacts-section" class="btn hero__btn btn__main btn__link">Записаться на тренировку</a>
           </div>
 
           <div class="hero__picture hero__picture-top">
@@ -280,8 +280,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Записаться</button>
-              <button class="card__btn btn btn__train">Расписание</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Записаться</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Расписание</a>
             </div>
           </div>
 
@@ -349,8 +350,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Записаться</button>
-              <button class="card__btn btn btn__train">Расписание</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Записаться</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Расписание</a>
             </div>
           </div>
 
@@ -418,8 +420,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Записаться</button>
-              <button class="card__btn btn btn__train">Расписание</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Записаться</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Расписание</a>
             </div>
           </div>
 
@@ -487,8 +490,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Записаться</button>
-              <button class="card__btn btn btn__train">Расписание</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Записаться</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Расписание</a>
             </div>
           </div>
 
@@ -510,7 +514,9 @@
             спаринги, игры, полезные семинары, тимбилдинги.
           </p>
 
-          <button class="camps__btn btn btn__camps">Смотреть анонсы</button>
+          <a href="https://t.me/panamba_volleyball_tbilisi/1138" class="btn__link camps__btn btn btn__camps"
+            target="_blank">Смотреть
+            анонсы</a>
         </div>
         <div class="camps__image-block">
           <div class="camps__image-wrapper">
@@ -642,7 +648,8 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">Записаться на тренировку</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">Записаться на
+                  тренировку</a>
               </div>
             </div>
 
@@ -700,7 +707,8 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">Записаться на тренировку</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">Записаться на
+                  тренировку</a>
               </div>
             </div>
 
@@ -834,7 +842,7 @@
             <a href="#" class="text contacts__content-link">panamba@example.com</a>
           </div>
         </div>
-        <div class="contacts__footer">
+        <div class="contacts__footer" id="contacts-section">
           <h2 class="title contacts__footer-title">Контакты</h2>
           <ul class="contacts__list">
             <li class="contacts__item contacts__item--facebook"><a href="#"
@@ -846,7 +854,7 @@
         </div>
       </div>
     </section>
-    <section class="section form">
+    <section class="section form" id="form-section">
 
       <div class="container">
         <h2 class="title contacts__footer-title">Написать нам</h2>
