--- a/src/english.html
+++ b/src/english.html
@@ -113,7 +113,7 @@
             <p class="text hero__subtitle">
               For adults and children
             </p>
-            <button class="btn hero__btn btn__main">Book trial class</button>
+            <a href="#contacts-section" class="btn hero__btn btn__main btn__link">Book trial class</a>
           </div>
 
           <div class="hero__picture hero__picture-top">
@@ -278,8 +278,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Book trial class</button>
-              <button class="card__btn btn btn__train">Schedule</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Book trial class</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Schedule</a>
             </div>
           </div>
 
@@ -348,8 +349,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Book trial class</button>
-              <button class="card__btn btn btn__train">Schedule</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Book trial class</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Schedule</a>
             </div>
           </div>
 
@@ -417,8 +419,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Book trial class</button>
-              <button class="card__btn btn btn__train">Schedule</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Book trial class</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Schedule</a>
             </div>
           </div>
 
@@ -487,8 +490,9 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn btn__train">Book trial class</button>
-              <button class="card__btn btn btn__train">Schedule</button>
+              <a href="#contacts-section" class="btn__lin card__btn btn btn__train">Book trial class</a>
+              <a href="https://t.me/panamba_volleyball_tbilisi" class="btn__link card__btn btn btn__train"
+                target="_blank">Schedule</a>
             </div>
           </div>
 
@@ -509,8 +513,8 @@
             and organizers, you do not need to worry about anything ; training will be organized 2 times a day, a
             tournament, sparring, games, intresting seminars, and team building.
           </p>
-
-          <button class="camps__btn btn btn__camps">View announcements</button>
+          <a href="https://t.me/panamba_volleyball_tbilisi/1138" class="btn__link camps__btn btn btn__camps"
+            target="_blank">View announcements</a>
         </div>
         <div class="camps__image-block">
           <div class="camps__image-wrapper">
@@ -641,7 +645,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">Book trial class</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">Book trial class</a>
               </div>
             </div>
 
@@ -697,18 +701,12 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn btn__main swiper-service__btn">Book trial class</button>
+                <a href="#contacts-section" class="btn btn__link btn__main swiper-service__btn">Book trial class</a>
               </div>
             </div>
-
           </div>
         </div>
-
-
-
       </div>
-
-
     </section>
 
     <section class="section trainers" id="trainers">
@@ -827,7 +825,7 @@
             <a href="#" class="text contacts__content-link">panamba@example.com</a>
           </div>
         </div>
-        <div class="contacts__footer">
+        <div class="contacts__footer" id="contacts-section">
           <h2 class="title contacts__footer-title">Contacts</h2>
           <ul class="contacts__list">
             <li class="contacts__item contacts__item--facebook"><a href="#"
